Correção na validação de campos vazios